<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logo_movies"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="110dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="380dp"
        android:paddingBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_email_login"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/email_tag"
            android:gravity="center"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="300dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_password_login"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/password_tag"
            android:gravity="center"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/login_button_tag"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"/>
    <TextView
        android:id="@+id/tv_register_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_tag"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="150dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>