<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.FormRegister">
    <ImageView
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:src="@drawable/logo_movies"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name_form"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/name_form_tag"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="250dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_form"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email_form_tag"
            android:inputType="textEmailAddress"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="350dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_form"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password_form_tag"
            android:inputType="textPassword"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register_form"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="150dp"
        android:text="@string/register_button_form_tag"
        android:textSize="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>